--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
 - id: export
   name: Export poetry.lock to requirements.txt
   language: system
-  entry: poetry export -f requirements.txt >requirements.txt
+  entry: poetry export -f requirements.txt -o requirements.txt
   files: "^poetry.lock$"
-  pass_filenams: falsepoetry
+  pass_filenams: false
